Added cocoa touch classes for the profile and editProfile view controllers and removed comments from appdelegate.m
For each view controller, I have to create a cocoa touch class to program the behavior of the view controller. I also removed unnecessary comments from appdelegate.m.

--- a/NikoBracket/Base.lproj/Main.storyboard
+++ b/NikoBracket/Base.lproj/Main.storyboard
@@ -76,10 +76,10 @@
             </objects>
             <point key="canvasLocation" x="2999" y="415"/>
         </scene>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="RE2-NE-SAq">
             <objects>
-                <viewController id="oxp-Mt-cV5" sceneMemberID="viewController">
+                <viewController id="oxp-Mt-cV5" customClass="ProfileViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dFZ-TY-AdU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -99,11 +99,47 @@
                         <viewLayoutGuide key="safeArea" id="ejF-TV-ixV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Ghb-li-sEz"/>
+                    <navigationItem key="navigationItem" id="Ghb-li-sEz">
+                        <barButtonItem key="rightBarButtonItem" title="edit" style="plain" id="JA7-lc-et3">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Llh-P7-u9h">
+                                <rect key="frame" x="302" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Edit"/>
+                                <connections>
+                                    <segue destination="0uD-Dq-iAC" kind="presentation" id="rAL-cv-4CU"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="pfp" destination="LAx-3g-zFl" id="siy-fK-Hkz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DpB-id-8P8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2995.6521739130435" y="1142.4107142857142"/>
+        </scene>
+        <!--Edit Profile View Controller-->
+        <scene sceneID="Xsf-aU-cwV">
+            <objects>
+                <viewController id="0uD-Dq-iAC" customClass="EditProfileViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GlS-Mg-7QA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Dk-n6-5Kb">
+                                <rect key="frame" x="87" y="126" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3IF-5M-eog"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tac-cc-rFq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3846" y="1142"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="799-Cn-jgF">
