Fix profile picture selection bug and modified editprofileviewcontroller fields to always contain most recent user info
Previously, I had a bug where I could not change the profile picture because I was using the file name provided by the phone which was too long. I changed it so that each selected image file is just named "image.png" when stored in parse. I also had it so that whenever my editprofileviewcontroller showed, the fields were automatically set to empty which was problematic. I fixed that by setting the fields to retrieved info from parse in the viewdidload in the editprofileviewcontroller.

--- a/NikoBracket/Base.lproj/Main.storyboard
+++ b/NikoBracket/Base.lproj/Main.storyboard
@@ -170,7 +170,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="displayName" destination="EKO-gF-owO" id="uyW-yW-5rC"/>
-                        <outlet property="email" destination="58L-Rx-Rl1" id="RQC-bq-n76"/>
+                        <outlet property="emailLabel" destination="58L-Rx-Rl1" id="Igb-Us-ygJ"/>
                         <outlet property="gradeAndMajor" destination="VJb-sE-TK0" id="1RK-hY-6UX"/>
                         <outlet property="pfp" destination="LAx-3g-zFl" id="siy-fK-Hkz"/>
                     </connections>
